--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,6 +28,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: '16.16'
+      - name: Install deps
+        run: npm install
+      - name: Run tests
+        run: npm run test:headless
+      - name: Build (production)
+        run: npm run build:prod
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
